[tool.poetry]
name = "quickhttp"
version = "1.0.0"
description = "Lightweight CLI that wraps Python's http.server with automatic port-finding and shutdown."
license = "MIT"
authors = ["Jay Qi <jayqi.opensource@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jayqi/quickhttp"
repository = "https://github.com/jayqi/quickhttp"
documentation = "https://jayqi.github.io/quickhttp/"
keywords = ["http server", "dev server"]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers"
]

[tool.poetry.scripts]
quickhttp = "quickhttp.cli:app"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = ">=1.0", python = "<3.8"}
pytimeparse = "^1.1.8"
typer = ">=0.3.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = ">=19.10b0"
flake8 = "^3.8.3"
pytest-cov = "^2.10.0"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.6"
mkdocstrings = ">=0.15.2"
requests = "^2.24.0"
packaging = ">=20.4"
mike = ">=1.1.0"
coverage = "^5.2"
mypy = ">=0.782"
mdx-truly-sane-lists = "1.2"

[tool.black]
line-length = 99
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
