[tool.poetry]
name = "quickhttp"
version = "2.0.0"
description = "Lightweight CLI that wraps Python's http.server with automatic port-finding and shutdown."
license = "MIT"
authors = ["Jay Qi <jayqi.opensource@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jayqi/quickhttp"
repository = "https://github.com/jayqi/quickhttp"
documentation = "https://jayqi.github.io/quickhttp/"
keywords = ["http server", "dev server"]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers"
]

[tool.poetry.scripts]
quickhttp = "quickhttp.cli:app"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = {version = ">=1.0", python = "<3.8"}
pytimeparse = "^1.1.8"
typer = ">=0.3.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.1"
black = ">=19.10b0"
mdx-truly-sane-lists = "1.2"
mike = ">=1.1.0"
mkdocs = "^1.4"
mkdocs-material = "^9.0"
mkdocstrings = {version = ">=0.20", extras = ["python"]}
mypy = ">=0.782"
packaging = ">=20.4"
pytest = "^7.2"
pytest-cov = "^4.0"
requests = "^2.24"
ruff = "^0.0.245"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff]
line-length = 99
select = [
  "E",  # Pyflakes
  "F",  # Pycodestyle
  "I",  # isort
]
src = ["quickhttp", "tests"]

[tool.ruff.isort]
known-first-party = ["quickhttp"]
force-sort-within-sections = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=quickhttp --cov-report=term --cov-report=html --cov-report=xml"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["quickhttp"]
