[project]
name = "quickhttp"
version = "2.1.0"
description = "Lightweight CLI that wraps Python's http.server with automatic port-finding and shutdown."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jay Qi", email = "jayqi.opensource@gmail.com" }]
keywords = ["http server", "dev server"]
classifiers = [
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
requires-python = ">=3.8"
dependencies = [
  "pytimeparse>=1.1.8",
  "typer>=0.3.0",
]

[project.urls]
homepage = "https://github.com/jayqi/quickhttp"
repository = "https://github.com/jayqi/quickhttp"
documentation = "https://jayqi.github.io/quickhttp/"

[project.scripts]
quickhttp = "quickhttp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

## DEV

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "docs" },
  "vspect",
]
lint = [
  "ruff>=0.0.245",
]
docs = [
  "mdx-truly-sane-lists>=1.3",
  "mike>=1.1.0",
  "mkdocs>=1.1.0",
  "mkdocs-macros-plugin",
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.20",
]
test = [
  "pytest>=7.2",
  "coverage>=7.1",
  "pytest-cov>=4.0",
  "requests",
]
typecheck = [
  "mypy[install-types]>=1.0.0",
]

## TOOLS

[tool.ruff]
line-length = 99
src = ["quickhttp", "tests"]
exclude = ["tests/assets"]

[tool.ruff.lint]
select = [
  "E", # Pyflakes
  "F", # Pycodestyle
  "I", # isort
]

[tool.ruff.lint.isort]
known-first-party = ["quickhttp"]
force-sort-within-sections = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=quickhttp --cov-report=term --cov-report=html --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["quickhttp"]

[tool.coverage.paths]
quickhttp = [
  "quickhttp/",
  "**/site-packages/quickhttp/",
]
